--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="">
+	<h1>Arjun Chand</h1>
+	<a href="https://www.linkedin.com/in/arjun-chand-/">LinkedIn.com</a>
+	<section id="skills">
+        <p>HTML, CSS, JavaScript, Web Development, etc.</p>
+    </section>
+	<section id="projects">
+        <ul>
+            <li>Project 1 - Description of Project 1</li>
+            <li>Project 2 - Description of Project 2</li>
+            <li>Project 3 - Description of Project 3</li>
+        </ul>
+    </section>
     <script type="text/javascript" src="./script.js">
 </script>
 
